# agentic-skill-framework

./: .env.example  .eslintrc.js  .gitignore  README.md  jest.config.js  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
agentic_skill_framework/: __init__.py  models.py
agentic_skill_framework.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
agentic_skill_framework/experience/: api.py  chat.py
agentic_skill_framework/governance/: audit_logger.py  auth.py  observability.py  policy_engine.py
agentic_skill_framework/knowledge/: artifact_store.py  knowledge_base.py  session_memory.py  vector_store.py
agentic_skill_framework/orchestration/: context_manager.py  goal_interpreter.py  planner.py  reflection_manager.py  skill_router.py  workflow_engine.py
agentic_skill_framework/runtime/: circuit_breaker.py  connectors.py  executor.py  sandbox.py  validators.py
agentic_skill_framework/skill_library/: dependency_resolver.py  metadata_catalog.py  registry.py  skill_definition.py
scripts/: run_dev.py  seed_db.py
skills/: __init__.py  _base.py
skills/code_executor/: __init__.py  manifest.json  skill.py
skills/summarizer/: __init__.py  manifest.json  skill.py
skills/web_search/: __init__.py  manifest.json  skill.py
src/: index.ts
src/agentic/: __init__.py
src/governance/: audit.ts  auth.ts  index.ts  metrics.ts  policy.ts
src/memory/: artifacts.ts  history.ts  index.ts  session.ts
src/orchestration/: context-manager.ts  goal-interpreter.ts  index.ts  planner.ts  reflection-manager.ts  skill-router.ts  workflow-engine.ts
src/runtime/: circuit-breaker.ts  executor.ts  index.ts  validators.ts
src/skill-library/: index.ts  metadata-catalog.ts  registry.ts  skill-definition.ts
src/types/: index.ts
tests/: conftest.py  test_experience.py  test_governance.py  test_knowledge.py  test_models.py  test_orchestration.py  test_runtime.py  test_skill_library.py
tests/e2e/: test_api_flows.py
tests/governance/: audit.test.ts
tests/integration/: test_execution_pipeline.py
tests/memory/: session.test.ts
(+71 files in other folders)
