[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-skill-framework"
version = "0.1.0"
description = "Modular agentic framework for discoverable, governed skill execution"
requires-python = ">=3.11"

dependencies = [
    # Web layer
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Data modeling & validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Database
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",

    # Schema validation
    "jsonschema>=4.22.0",

    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Networking / connectors
    "httpx>=0.27.0",

    # Observability
    "structlog>=24.1.0",

    # Semantic versioning
    "semver>=3.0.2",

    # Utilities
    "anyio>=4.3.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
vector = [
    "numpy>=1.26.0",
]

[project.scripts]
agentic-dev = "scripts.run_dev:main"
agentic-seed = "scripts.seed_db:main"
agentic-register = "scripts.register_skill:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
